# vacation_calendar_updater

./: .gitignore  .pylintignore  .pylintrc  .ruffignore  AGENTS.md  ALL_IMPROVEMENTS_COMPLETE.md  COMPLETION_REPORT.md  DARK_MODE_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  IMPORT_TESTING.md  IMPORT_TESTING_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MISSING_TESTS_IMPLEMENTATION.md  MODAL_REMOVAL_SUMMARY.md  README.md  UI_IMPROVEMENTS_COMPLETED.md  app.spec  build-appimage.sh  build-flatpak.sh  build-linux.sh  build-windows-docker.sh  datepicker.py  debug_dark_mode.py  main.py  pyproject.toml  pytest.ini  rclick_menu.py  requirements.txt  run.sh  test_all.sh  test_import.sh  verify_delete_undelete.py
.clio/: instructions.md
.github/workflows/: test.yml
app/: __init__.py  __main__.py  _vendor.py  config.py  main.py  qt_config.py  services.py  table_models.py  themes.py  undo_manager.py  validation.py  workers.py
app/ui/: batch_selector.py  dark_mode.py  datepicker.py  deleted_batch_selector.py  main_window.py  main_window.py.tmp  time_picker.py
flatpak/: com.github.dtg01100.vacation_calendar_updater.appdata.xml  com.github.dtg01100.vacation_calendar_updater.desktop  com.github.dtg01100.vacation_calendar_updater.json  google_auth-2.10.0-py2.py3-none-any.whl  org.dtg01100.VacationCalendarUpdater.desktop  org.dtg01100.VacationCalendarUpdater.json  org.dtg01100.vacation_calendar_updater.desktop  org.dtg01100.vacation_calendar_updater.json  pypi-dependencies.json  requirements-runtime.txt  rfc3339-6.2-py3-none-any.whl
hooks/: hook-PySide6.py
openspec/changes/comprehensive-testing/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/comprehensive-testing/specs/coverage/: spec.md
tests/: conftest.py  test_batch_selector.py  test_batch_selector_integration.py  test_batch_selector_ui.py  test_batch_ui.py  test_concurrent_operations.py  test_config.py  test_dark_mode.py  test_datepicker.py.bak  test_datepicker_dialog.py  test_delete_undelete.py  test_email_persistence.py  test_event_creation_worker.py  test_google_api_integration.py  test_gui_batch_selector.py  test_import_batching.py  test_import_fetch_worker.py  test_import_integration.py  test_import_shutdown.py  test_main_window.py.bak  test_main_window_callbacks.py  test_main_window_dates.py  test_mode_transitions.py  test_mode_validation.py  test_modes.py  test_multiple_batch_operations.py  test_services.py  test_startup_worker.py  test_time_picker_dialog.py  test_ui_modals.py  test_undo_manager.py  test_undo_redo_workers.py  test_validation.py  test_window_persistence.py  test_workers.py
tests/fixtures/: __init__.py  mock_api.py  sample_data.py
tests/integration/: __init__.py  test_create_mode.py  test_delete_mode.py  test_import_mode.py  test_mode_transitions.py  test_update_mode.py
(+2 files in other folders)
