[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vacation-calendar-updater"
version = "0.1.0"
description = "A tool for managing vacation calendar events in Google Calendar"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vacation Calendar Updater Contributors"}
]
dependencies = [
    "PySide6>=6.6.0",
    "google-api-python-client>=2.100.0",
    "oauth2client>=4.1.3",
    "python-dateutil>=2.8.2",
    "validate-email>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
]

[project.scripts]
vacation-calendar = "app.main:main"

[project.gui-scripts]
vacation-calendar-gui = "app.ui.main_window:launch"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Enable strict rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented-out code)
    "T20", # flake8-print
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # Qt method names must match framework conventions (rowCount, etc.)
    "ARG001", # Unused function arguments in fixtures are required by pytest
    "ARG002", # Unused method arguments in mocks/stubs are intentional
    "ARG005", # Unused lambda arguments required by Qt signal/slot mechanism
]

[tool.pytest.ini_options]
testpaths = ["tests"]
